config/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consignee Appointment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consignee_City_Raw__c</fullName>
        <label>Consignee City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_City__c</fullName>
        <formula>If (Consignee__c != null , Consignee__r.BillingCity, Consignee_City_Raw__c)</formula>
        <label>Consignee City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact_Email_Raw__c</fullName>
        <label>Consignee Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact_Email__c</fullName>
        <formula>if ( Consignee_Contact__c != null ,  Consignee_Contact__r.Email , Consignee_Contact_Email_Raw__c )</formula>
        <label>Consignee Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact_Name_Raw__c</fullName>
        <label>Consignee Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact_Name__c</fullName>
        <formula>if( Consignee_Contact__c != null ,  Consignee_Contact__r.FirstName  &amp; &quot; &quot; &amp; Consignee_Contact__r.LastName , Consignee_Contact_Name_Raw__c )</formula>
        <label>Consignee Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact_Phone_Raw__c</fullName>
        <label>Consignee Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact_Phone__c</fullName>
        <formula>If ( Consignee_Contact__c  != null , Consignee_Contact__r.Phone , Consignee_Contact_Phone_Raw__c )</formula>
        <label>Consignee Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Consignee Contact)</relationshipLabel>
        <relationshipName>Consignee_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Name_Raw__c</fullName>
        <label>Consignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Name__c</fullName>
        <formula>if ( not(Consignee__c = null ) , Consignee__r.Name , Consignee_Name_Raw__c )</formula>
        <label>Consignee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_State_Raw__c</fullName>
        <label>Consignee State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consignee_State__c</fullName>
        <formula>If( Consignee__c != null, Consignee__r.BillingState, text( Consignee_State_Raw__c ))</formula>
        <label>Consignee State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Street_Raw__c</fullName>
        <label>Consignee Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Street__c</fullName>
        <formula>if ( Consignee__c != null, Consignee__r.BillingStreet, Consignee_Street_Raw__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Zip_Raw__c</fullName>
        <label>Consignee Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Zip__c</fullName>
        <formula>if ( Consignee__c != null ,  Consignee__r.BillingPostalCode , Consignee_Zip_Raw__c )</formula>
        <label>Consignee Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Consignee)</relationshipLabel>
        <relationshipName>shipments_consignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Credit Card Transaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Note__c</fullName>
        <label>Delivery Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Earliest_Delivery_Date__c</fullName>
        <label>Earliest Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Pickup_Date__c</fullName>
        <label>Earliest Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatbed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Full_Truck_Cost_Calc__c</fullName>
        <formula>if( not(isnull(Estimated_Full_Truck_Cost__c )), Estimated_Full_Truck_Cost__c,  Estimated_Full_Truck_Cost_Per_Mile__c * Total_Miles__c )</formula>
        <label>Estimated Full Truck Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Full_Truck_Cost_Per_Mile__c</fullName>
        <label>Estimated Full Truck Cost Per Mile</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Full_Truck_Cost__c</fullName>
        <label>Estimated Full Truck Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fragility__c</fullName>
        <label>Fragility</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Very Durable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Durable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Fragile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Very Fragile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_Insurance_In_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Insurance In Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Booked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Cost__c</fullName>
        <label>Insurance Cost</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Gross_Profit__c</fullName>
        <formula>if( Insurance_Booked__c , Insurance_Price__c - Insurance_Cost__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Payment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Payment Made?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Price__c</fullName>
        <label>Insurance Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Tendered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Tendered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>shipments_insurer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Delivery_Date__c</fullName>
        <label>Latest Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Pickup_Date__c</fullName>
        <label>Latest Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <inlineHelpText>Select all of packaging types that make up this shipment.</inlineHelpText>
        <label>Packaging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_of_Truck_Avg__c</fullName>
        <formula>if(and(not(isnull(Percent_of_Truck_Feet__c)),not(isnull(Percent_of_Truck_Weight__c))),( Percent_of_Truck_Feet__c + Percent_of_Truck_Weight__c ) / 2,null)</formula>
        <label>Percent of Truck Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Truck_Feet__c</fullName>
        <formula>Trailer_Feet__c / 53</formula>
        <label>Percent of Truck Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_of_Truck_Weight__c</fullName>
        <formula>Weight__c / 40000</formula>
        <label>Percent of Truck Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pickup_Note__c</fullName>
        <label>Pickup Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pieces__c</fullName>
        <label>Pieces</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pro_Number__c</fullName>
        <label>Pro Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proportionate_Share_of_Full_Truck_Cost__c</fullName>
        <formula>Estimated_Full_Truck_Cost_Calc__c * Percent_of_Truck_Avg__c</formula>
        <label>Proportionate Share of Full Truck Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipper_City_Raw__c</fullName>
        <label>Shipper City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_City__c</fullName>
        <formula>if ( not(Shipper__c = null ) , Shipper__r.BillingCity , Shipper_City_Raw__c )</formula>
        <label>Shipper City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact_Email_Raw__c</fullName>
        <label>Shipper Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact_Email__c</fullName>
        <formula>if ( Shipper_Contact__c != null , Shipper_Contact__r.Email , Shipper_Contact_Name_Raw__c )</formula>
        <label>Shipper Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact_Name_Raw__c</fullName>
        <label>Shipper Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact_Name__c</fullName>
        <formula>if ( Shipper_Contact__c != null , Shipper_Contact__r.FirstName &amp; &quot; &quot; &amp;Shipper_Contact__r.LastName, Shipper_Contact_Name_Raw__c )</formula>
        <label>Shipper Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact_Phone_Raw__c</fullName>
        <label>Shipper Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact_Phone__c</fullName>
        <formula>if (Shipper_Contact__c != null , Shipper_Contact__r.Phone , Shipper_Contact_Phone_Raw__c )</formula>
        <label>Shipper Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Shipper Contact)</relationshipLabel>
        <relationshipName>Shipper_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Name_Raw__c</fullName>
        <label>Shipper Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Name__c</fullName>
        <formula>if ( Shipper__c != null , Shipper__r.Name , Shipper_Name_Raw__c )</formula>
        <label>Shipper Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_State_Raw__c</fullName>
        <label>Shipper State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipper_State__c</fullName>
        <formula>if ( not(Shipper__c = null ) , Shipper__r.BillingState , text(Shipper_State_Raw__c ))</formula>
        <label>Shipper State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Street_Raw__c</fullName>
        <label>Shipper Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Street__c</fullName>
        <formula>if ( not(Shipper__c = null ) ,  Shipper__r.BillingStreet  , Shipper_Street_Raw__c )</formula>
        <label>Shipper Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Zip_Raw__c</fullName>
        <label>Shipper Zip</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Zip__c</fullName>
        <formula>if ( Shipper__c != null ,  Shipper__r.BillingPostalCode , Shipper_Zip_Raw__c )</formula>
        <label>Shipper Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Shipper)</relationshipLabel>
        <relationshipName>shipments_shipper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Profit__c</fullName>
        <formula>Insurance_Gross_Profit__c + Transportation_Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Miles__c</fullName>
        <label>Total Miles</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Insurance__c</fullName>
        <formula>If(and( Insurance_Price__c &gt; 0, Transportation_Price__c &gt; 0), Insurance_Price__c + Transportation_Price__c ,null)</formula>
        <label>Total Price With Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_Without_Insurance__c</fullName>
        <formula>Transportation_Price__c</formula>
        <label>Total Price Without Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailer_Feet__c</fullName>
        <label>Trailer Feet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation Booked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transportation_Cost__c</fullName>
        <label>Transportation Cost</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation_Gross_Profit__c</fullName>
        <formula>IF( Transportation_Booked__c ,Transportation_Price__c - Transportation_Cost__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transportation Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation_Payment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation Payment Made?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transportation_Price__c</fullName>
        <label>Transportation Price</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation_Tendered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation Tendered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <inlineHelpText>Total weight in pounds</inlineHelpText>
        <label>Weight</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2X_Share_of_Full_Truck_Cost__c</fullName>
        <formula>Proportionate_Share_of_Full_Truck_Cost__c * 2</formula>
        <label>2X Share of Full Truck Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Shipper_State__c</columns>
        <columns>Consignee_State__c</columns>
        <columns>Weight__c</columns>
        <columns>Trailer_Feet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Shipments</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <validationRules>
        <fullName>Shipment_Number_is_Numeric</fullName>
        <active>false</active>
        <errorConditionFormula>not(isnumber( Name ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The shipment number must be a number.</errorMessage>
    </validationRules>
</CustomObject>